--- a/pathfinder/package.json
+++ b/pathfinder/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pathfinder",
   "version": "0.1.0",
-  "homepage": "https://bishtn05.github.io/react-gh-pages",
+  "homepage": "https://bishtn05.github.io/home",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
